Utworzenie Tablicy w bazie application properties
spring.jpa.hibernate.ddl-auto = create - jesli nie ma tablicy to ja Tworzy

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.mvc.view.suffix=.jsp
-spring.datasource.url=jdbc:postgresql://localhost:5432/navin
+spring.datasource.url=jdbc:postgresql://localhost:5432/etiko
 spring.datasource.username=postgres
 spring.datasource.password=0
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto = create
