--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.datasource.username=postgres
 spring.datasource.password=0
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.use-new-id-generator-mappings = true
