--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.password=0
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql = true
 spring.jpa.hibernate.use-new-id-generator-mappings = true
+spring.jpa.hibernate.ddl-auto = create
