--- a/pom.xml
+++ b/pom.xml
@@ -16,14 +16,21 @@
 
 	<properties>
 		<java.version>1.8</java.version>
-	</properties>
 
+    <spring-security.version>5.0.6.RELEASE</spring-security.version>
+    <spring.version>5.0.6.RELEASE</spring.version>
+</properties>
 	<dependencies>
 	
 			<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
+		<dependency>
+	
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-config</artifactId>
+    </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
